k8s/apps/default/thelounge/app/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thelounge
  labels:
    app: thelounge
spec:
  selector:
    matchLabels:
      app: thelounge
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: thelounge
      annotations:
        reloader.stakater.com/auto: "true"
    spec:
      hostname: thelounge
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: thelounge
        - name: cluster-ca-certificates
          configMap:
            name: cluster-ca-certificates.crt
            items:
              - key: ca-certificates.crt
                path: ca-certificates.crt
      securityContext:
        runAsNonRoot: true
        runAsUser: 568
        runAsGroup: 568
        fsGroup: 568
        fsGroupChangePolicy: OnRootMismatch
        supplementalGroups: [1000]
        seccompProfile: { type: RuntimeDefault }
      containers:
        - name: thelounge
          image: ghcr.io/thelounge/thelounge:4.5.0@sha256:197048ec6e1a62a1abe7a55b466b24954ea22bd0998c8887b4a8bd1cce696530
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities: { drop: ["ALL"] }
          ports:
            - containerPort: 9000
              name: web
          startupProbe:
            httpGet:
              path: /
              port: web
          livenessProbe:
            httpGet:
              path: /
              port: web
          readinessProbe:
            httpGet:
              path: /
              port: web
            successThreshold: 3
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              memory: 512Mi
          volumeMounts:
            - name: config
              mountPath: /config
            - name: cluster-ca-certificates
              mountPath: /etc/ssl/certs/cluster-ca-certificates.crt
              subPath: ca-certificates.crt
              readOnly: true
