k8s/apps/default/thelounge/app/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: thelounge
  name: thelounge
spec:
  selector:
    app: thelounge
  ipFamilies:
    - IPv4
  ports:
    - name: web
      port: 9000
      protocol: TCP
